[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore",
]

exclude = [
    "zircon-user",
    "rboot",
    "linux-user",
]

[profile.release]
lto = true


[patch.'https://github.com/DeathWish5/executor.git']
executor = { path = "../../ASYNC/executor/executor" }