[workspace]
members = [
    "drivers",
    "kernel-hal",
    "zircon-object",
    "zircon-syscall",
    "linux-object",
    "linux-syscall",
    "loader",
    "zCore",
]

exclude = [
    "zircon-user",
    "rboot",
    "linux-user",
]

[profile.release]
lto = true


[patch.'https://github.com/DeathWish5/executor.git']
executor = { path = "../../ASYNC/executor/executor" }

[patch.'https://github.com/DeathWish5/rcore-fs']
rcore-fs = { path = "../../ASYNC/rcore-fs/rcore-fs" }
rcore-fs-sfs = { path = "../../ASYNC/rcore-fs/rcore-fs-sfs" }
rcore-fs-ramfs = { path = "../../ASYNC/rcore-fs/rcore-fs-ramfs" }
rcore-fs-mountfs = { path = "../../ASYNC/rcore-fs/rcore-fs-mountfs" }
rcore-fs-devfs = { path = "../../ASYNC/rcore-fs/rcore-fs-devfs" }