[package]
name = "zcore"
version = "0.1.0"
authors = ["PanQL <panqinglin00@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
graphic = ["linux-loader?/graphic", "kernel-hal/graphic"]
board_qemu = []
board_d1 = ["link_user_img"]
ram_user_img = []
link_user_img = ["ram_user_img"]
zircon = ["zircon-loader"]
linux = ["linux-loader", "linux-object", "rcore-fs", "rcore-fs-sfs", "virtio-drivers"]
async_virtio = []

[profile.release]
lto = true

[dependencies]
log = "0.4"
spin = "0.9"
cfg-if = "1.0"
buddy_system_allocator = "0.7"
lazy_static = { version = "1.4", features = ["spin_no_std" ] }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "b3f9f51" }
trapframe = "0.8.0"
executor = { git = "https://github.com/rcore-os/executor.git", rev = "a2d02ee9" }
kernel-hal = { path = "../kernel-hal" }
zircon-loader = { path = "../zircon-loader", default-features = false, optional = true }
linux-loader = { path = "../linux-loader", default-features = false, optional = true }
linux-object = { path = "../linux-object", default-features = false, optional = true }
# rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7c232ec", optional = true }
# rcore-fs = { git = "https://github.com/rcore-os/rcore-fs", rev = "7c232ec", optional = true }
rcore-fs-sfs = { git = "https://github.com/DeathWish5/rcore-fs", branch = "async-fs", optional = true }
rcore-fs = { git = "https://github.com/DeathWish5/rcore-fs", branch = "async-fs", optional = true }
virtio-drivers = { git = "https://github.com/DeathWish5/virtio-drivers", features = ["async"], optional = true }
async-trait = "0.1"
# FIX LATER
# rvm = { git = "https://github.com/rcore-os/RVM", rev = "382fc60", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
rlibc-opt = { git = "https://github.com/rcore-os/rlibc-opt.git", rev = "fb1d4a9" }
rboot = { path = "../rboot", default-features = false }
rvm = { git = "https://github.com/rcore-os/RVM", rev = "e91d625", optional = true }

[target.'cfg(target_arch = "riscv64")'.dependencies]
rlibc = "1.0"

# [patch.'https://github.com/DeathWish5/virtio-drivers']
# virtio-drivers = { path = "../../../ASYNC/virtio-drivers" }

# [patch.'https://github.com/DeathWish5/rcore-fs']
# rcore-fs = { path = "../../../ASYNC/rcore-fs/rcore-fs" }
# rcore-fs-sfs = { path = "../../../ASYNC/rcore-fs/rcore-fs-sfs" }
# rcore-fs-ramfs = { path = "../../../ASYNC/rcore-fs/rcore-fs-ramfs" }
# rcore-fs-mountfs = { path = "../../../ASYNC/rcore-fs/rcore-fs-mountfs" }
# rcore-fs-devfs = { path = "../../../ASYNC/rcore-fs/rcore-fs-devfs" }